2006-12-18  Sankar P  <psankar@novell.com>

	* camel/camel-exchange-provider.c:
	Do not check mail in all folders by defalut.
	Make it a configurable option.
	Will be more than useful in case you have a large number of folders

2006-12-04  Veerapuram Varadhan  <vvaradhan@novell.com>

	* camel/camel-exchange-store.c: (make_folder_info): Commented out
	decode path code as e-d-s part of the patch couldn't make it in
	time for 2.9.3
	
2006-12-04  Veerapuram Varadhan  <vvaradhan@novell.com>

	** Committing Check-all-folders implmentation from P Sankar

	* camel/camel-exchange-provider.c: Add a checkbox to enable the
	user to not to choose all folders while fetching mails.
	
2006-12-04  Veerapuram Varadhan  <vvaradhan@novell.com>

	* camel/camel-exchange-store.c: (make_folder_info): Decode path
	name and use it as full_name.
	
2006-12-01  Srinivasa Ragavan  <sragavan@novell.com>

	** Committing GAL Caching implementation from Devashish

	* addressbook/Makefile.am: Added the gconf support to exchange storage
	* addressbook/apps_exchange_addressbook.schemas.in.in: Schema to set
	the cache reload interval
	* addressbook/e-book-backend-gal.c: (gal_reconnect),
	(get_contact_handler), (get_contact), (contact_list_handler),
	(get_contact_list), (build_contact_from_entry), (poll_ldap),
	(ldap_search_handler), (start_book_view), (tool_server_controls),
	(parse_page_control), (dosearch), (generate_cache), (set_mode),
	(load_source), (dispose): Implementation of GAL Cache for Exchange.
	* configure.in:

2006-11-16  Srinivasa Ragavan  <sragavan@novell.com>

	* addressbook/e-book-backend-gal.c: (contact_list_handler): Fix for
	hang while viewing a HTML mail, which has images to be loaded based on
	contacts. Downstream fix from SUSE.

2006-11-15  Chenthill Palanisamy  <pchenthill@novell.com>

	* calendar/e-cal-backend-exchange.c: (open_calendar):
	Set the online status before connecting to the server.
	Notify error messages to evolution.
	Fixes #219729 (bugzilla.novell.com)
