@@ -1,3 +1,11 @@
+2006-12-18  Veerapuram Varadhan  <vvaradhan@novell.com>
+
+	** Fix for 346728, 268412
+
+	* mail/mail-stub-exchange.c: (get_folder_info):  Don't scan all
+	the hierarchies always.  We now load, when not recursive fetch,
+	folders on demand.  This reduces both memory and loading time.
+	
 2006-12-18  Sankar P  <psankar@novell.com>
 
 	* camel/camel-exchange-provider.c:
